--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
